plugins/groovy/testdata/highlighting/ModifiersInPackageAndImportStatements.groovy
@Deprecated <error descr="Package definition cannot have modifiers">private</error> <error descr="Package definition cannot have modifiers">final</error> package x;

@Deprecated <error descr="Import statement cannot have modifiers">final</error> <warning descr="Unused import">import java.lang.Object</warning>;